bug fix
on mobile phone the title was pushed too high on the page and we couldnt scroll up to it

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -167,6 +167,7 @@ body {
     
     @media only screen and (max-width: 1024px ) {
         main {
+            justify-content: unset;
             flex-flow: column;
              .hero {
                 width: 370px;
